# pythermacell

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  test.yml
docs/: CHANGELOG.md  CI_CD_IMPROVEMENTS.md  DEVELOPMENT.md  MIGRATION_v0.2.0.md  README.md  USAGE.md
docs/api/: DISCOVERED_ENDPOINTS.md  GROUPS_API.md  LED_CONTROL.md  OTA_UPDATE_ENDPOINTS.md  README.md  openapi.yaml
docs/architecture/: AUTHENTICATION.md  README.md  RESILIENCE.md
docs/claude/: CI_CD.md
docs/development/: CODE_REVIEW_PYTHON_BEST_PRACTICES.md
docs/testing/: INTEGRATION_TEST_RESULTS.md  TESTING.md
examples/: README.md  basic_control.py  basic_usage.py  monitor_devices.py  resilience_patterns.py  resilient_client.py  session_injection.py
src/pythermacell/: __init__.py  api.py  auth.py  client.py  const.py  devices.py  exceptions.py  models.py  parsers.py  queue.py  resilience.py  serializers.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth_reauth.py  test_auth_resilience.py  test_auth_retry.py  test_auth_smart.py  test_client.py  test_devices.py  test_exceptions.py  test_groups.py  test_parsers.py  test_queue.py  test_resilience.py  test_serializers.py
tests/integration/: README.md  __init__.py  conftest.py  test_auth_integration.py  test_client_integration.py  test_device_control_integration.py  test_groups.py  test_resilience_integration.py
